--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -1,10 +1,12 @@
 .dropdown-menu {
+  position: absolute;
   display: none;
   width: auto;
   position: absolute;
-  top: 100px;
+  top: 78px;
   list-style: none;
   text-align: start;
+  z-index: 1;
 }
 
 .dropdown-menu li {
